--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name='dmca-site-verification' content='Z2Vxc2JnYWpQUXZIVTdJM1FkWlZQQT090' />
 </head>
   <body>
 
